Updated the project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ramage",
+  "name": "ramage-vscode",
   "displayName": "Ramage",
   "description": "A fresh and nice color theme following the Ramage colorset",
   "version": "0.0.1",
